--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
 
+
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,6 +33,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/lightBackgroundColor"
             />
     </LinearLayout>
     <LinearLayout
