--- a/app/src/main/res/layout/item_challenge.xml
+++ b/app/src/main/res/layout/item_challenge.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/item_challenge_view"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
     <TextView
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Challenge name"
+        android:background="@color/invis"
         android:textSize="25sp"
         android:layout_margin="10dp"
         android:id="@+id/item_challenge_name"/>
@@ -16,6 +17,7 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/invis"
         android:textSize="25sp"
         android:layout_margin="10dp"
         android:gravity="center"
