--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,12 +2,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="Personal data"></PreferenceCategory>
+        android:title="Personal data">
+    </PreferenceCategory>
 
         <EditTextPreference
             android:key="edittext_preference"
             android:title="Name"
-            android:summary="Write you're name here"></EditTextPreference>
+            android:summary="Write you're name here"
+            ></EditTextPreference>
             //android:dialogTitle="@string/dialog_title_edittext_preference">
 
 </PreferenceScreen>
