--- a/app/src/main/res/layout/activity_run_statistics.xml
+++ b/app/src/main/res/layout/activity_run_statistics.xml
@@ -5,5 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RunStatisticsActivity">
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/runsRecycler"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
