--- a/app/src/main/res/layout/activity_run_tracker.xml
+++ b/app/src/main/res/layout/activity_run_tracker.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3">
-        <include layout="@layout/tracker_map"/>
+        <include layout="@layout/tracker_chart"/>
     </FrameLayout>
 
     <ImageView
