--- a/app/src/main/res/layout/item_run.xml
+++ b/app/src/main/res/layout/item_run.xml
@@ -3,8 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/item_run_view"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:layout_weight="1"
         android:layout_width="0dp"
@@ -23,6 +27,11 @@
         android:layout_margin="10dp"
         android:text=""
         android:id="@+id/item_run_date"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:layout_weight="1"
         android:layout_width="0dp"
@@ -42,5 +51,6 @@
         android:layout_margin="10dp"
         android:text=""
         android:id="@+id/item_run_time"/>
+    </LinearLayout>
 
 </LinearLayout>
