--- a/app/src/main/res/layout/activity_single_run_statistics.xml
+++ b/app/src/main/res/layout/activity_single_run_statistics.xml
@@ -17,7 +17,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutOverlay"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
