--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -19,7 +19,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_lock_idle_low_battery"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:contentDescription="@string/weather_image" />
         <TextView
             android:id="@+id/currentTempTV"
             android:gravity="center"
@@ -48,7 +49,7 @@
             android:id="@+id/scrollerText"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
 
 
     </ScrollView>
