--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
-            android:contentDescription="ProfilePicture"
+            android:contentDescription="@string/profilepicture_desc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/user_icon2" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/challengeRecycler"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/lightBackgroundColor"
@@ -43,7 +43,7 @@
         android:layout_weight="2"
         android:orientation="horizontal"
         android:layout_margin="10dp"
-        >
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -55,7 +55,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Best time to Run:"
+                android:text="@string/best_time_to_run"
                 android:textSize="25sp"
                 />
             <TextView
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="35sp"
-                android:text="loading"
+                android:text="@string/loading"
                 />
         </LinearLayout>
         <LinearLayout
@@ -77,7 +77,7 @@
                 android:id="@+id/uvIndex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="UV index: --"
+                android:text="@string/uv_index_placeholder"
                 android:textSize="25sp"
                 />
             <TextView
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
-                android:text="Air Quality: --"
+                android:text="@string/air_quality_placeholder"
                 />
         </LinearLayout>
 
