--- a/app/src/main/res/layout/activity_run_tracker.xml
+++ b/app/src/main/res/layout/activity_run_tracker.xml
@@ -18,7 +18,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/nutrientbar" />
+        app:srcCompat="@drawable/nutrientbar"
+        android:contentDescription="@string/food_image_desc" />
     <!-- TODO kaja-->
 
 
@@ -33,7 +34,7 @@
             android:id="@+id/timerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:00"
+            android:text="@string/timer_placeholder"
             android:textSize="25sp"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -54,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="0.0 km"
+                android:text="@string/distance_placeholder"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/floatingStartTimer"
@@ -66,9 +67,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginStart="18dp"
-                android:text="6.9 min/km"
+                android:text=""
                 android:textSize="25sp"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/floatingStartTimer" />
