--- a/app/src/main/res/layout/myfloating_play.xml
+++ b/app/src/main/res/layout/myfloating_play.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="center"
     android:clickable="true"
 
-    android:contentDescription="start button"
+    android:contentDescription="@string/start_button_desc"
     android:focusable="true"
     app:fabCustomSize="100dp"
     app:layout_constraintBottom_toBottomOf="parent"
