--- a/app/src/main/res/layout/tracker_chart.xml
+++ b/app/src/main/res/layout/tracker_chart.xml
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Következő megálló:"
+        android:text="@string/kov_meg"
         android:textSize="25sp"
         />
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:textSize="25sp"
             android:textAlignment="textEnd"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:text=""/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
