--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,9 +19,9 @@
         <item name="android:textColorHint">@color/black</item>
         <item name="android:colorForeground">@color/black</item>
 
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <!-- <item name="android:actionBarStyle">@style/MyActionBar</item>-->
     </style>
-
+    <!--
     <style name="MyActionBar" parent="Theme.Run4YourLife">
         <item name="android:background">@color/primaryDarkColor</item>
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
@@ -30,7 +30,7 @@
         parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@color/secondaryDarkColor</item>
     </style>
-
+    -->
 
     <style name="PreferenceScreen" parent="Theme.Run4YourLife">
         <item name="android:textColor">@color/black</item>
